--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,2 +1,4 @@
 @import "./variables/colors"
+@import "../components/shared/Header/Header"
+@import "../components/UIElements/Navigation/Navigation"
 @import "./reset"
