--- a/src/styles/variables/colors.sass
+++ b/src/styles/variables/colors.sass
@@ -1,6 +1,3 @@
-$light-bg-color: #f4f4f4
-$dark-body-color: #111
-$base-body-color: #444
-$light-body-color: #777
-$active-color: #9055a2
-$border-color: #ccc
+$primary: #FD7139
+$secondary: #0A2533
+$light-grey: #F2F2F2
