--- a/src/components/shared/Header/Header.sass
+++ b/src/components/shared/Header/Header.sass
@@ -1,6 +1,8 @@
 .header
-  background-size: cover
   height: 100vh
   width: 100%
   display: flex
   flex-direction: column
+  &__background
+    background-size: cover
+    background-position: center center
