--- a/src/components/UIElements/Navigation/Navigation.sass
+++ b/src/components/UIElements/Navigation/Navigation.sass
@@ -3,5 +3,12 @@
   display: flex
   flex-direction: row
   flex-wrap: wrap
-  justify-content: space-between
+  justify-content: center
   align-items: center
+  border-bottom: 1px solid rgba(255,255,255,0.2)
+  max-width: 1640px
+  width: 100%
+  &__logo
+    flex: 8
+  &__controls
+    flex: 4
