--- a/src/components/shared/Header/Header.sass
+++ b/src/components/shared/Header/Header.sass
@@ -3,6 +3,7 @@
   width: 100%
   display: flex
   flex-direction: column
+  align-items: center
   &__background
     background-size: cover
     background-position: center center
