--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,7 @@
 @import "./variables/colors";
 @import "./reset";
+@import "./mixins";
+@import "../components//UIElements/SearchInput/SearchInput.sass";
 @import "../components/UIElements/Navigation/Navigation";
+@import "../components/UIElements/Button/Button.sass";
 @import "../components/shared/Header/Header";
