Adding sliding menu

--- a/src/components/UIElements/Button/Button.sass
+++ b/src/components/UIElements/Button/Button.sass
@@ -25,3 +25,10 @@
   &--secondary--outlined
     color: $secondary
     border: 1px solid $secondary
+  &--outlined
+    color: #fff
+    border: 1px solid #fff
+    &:hover
+      background-color: #fff
+      border: 1px solid $secondary
+      color: $secondary
