--- a/src/components/UIElements/Navigation/Navigation.sass
+++ b/src/components/UIElements/Navigation/Navigation.sass
@@ -20,7 +20,7 @@
     justify-content: flex-end
     gap: 35px
 .sticky-navigation
-  height: 80px
+  height: 60px
   display: flex
   flex-direction: row
   flex-wrap: wrap
@@ -37,6 +37,9 @@
     display: flex
     justify-content: center
   &__logo
+    height: 35px
+    img
+      height: 35px
 
   &__controls
     flex: 2
