--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,4 +4,7 @@
 @import "../components//UIElements/SearchInput/SearchInput.sass";
 @import "../components/UIElements/Navigation/Navigation";
 @import "../components/UIElements/Button/Button.sass";
+@import "../components/UIElements/SlidingPanel/SlidingPanel.sass";
+@import "../components/UIElements/BlurPanel/BlurPanel.sass";
+@import "../components/UIElements/Typohraphy/Typography.sass";
 @import "../components/shared/Header/Header";
