--- a/src/styles/reset.sass
+++ b/src/styles/reset.sass
@@ -45,7 +45,6 @@ body
   font-family: Proxima Nova, sans-serif
 img
   max-width: 100%
-p
-  display: block
-  color: black
-  font-family: Roboto
+h1,h2,h3,h4,h5,h6,p
+  margin: 0
+  padding: 0
