--- a/src/components/UIElements/Navigation/Navigation.sass
+++ b/src/components/UIElements/Navigation/Navigation.sass
@@ -20,6 +20,7 @@
     justify-content: flex-end
     gap: 35px
 .sticky-navigation
+  z-index: 9999
   height: 60px
   display: flex
   flex-direction: row
