Adding "weconnect section+ lottie implementation, more props to container,more props to button

--- a/src/components/UIElements/BlurPanel/BlurPanel.sass
+++ b/src/components/UIElements/BlurPanel/BlurPanel.sass
@@ -4,4 +4,5 @@
   align-items: center
   height: auto
   padding: 55px 115px
-  backdrop-filter: blur(10px)
+  background-color: rgba(0,0 ,0 ,.4 )
+  background-blend-mode: darken
