--- a/src/components/UIElements/Typohraphy/Typography.sass
+++ b/src/components/UIElements/Typohraphy/Typography.sass
@@ -7,11 +7,11 @@ h1,h2,h3,h4,h5,h6,p
 
 .typography--variant-h1
   font-size: 6rem
-  font-weight: 500
+  font-weight: 700
 
 .typography--variant-h2
   font-size: 3.75rem
-  font-weight: 500
+  font-weight: 600
 
 .typography--variant-h3
   font-size: 3rem
@@ -37,17 +37,17 @@ h1,h2,h3,h4,h5,h6,p
   font-size: 0.875rem
   font-weight: 500
 
-.typography--variant-body1
+.typography--variant-p
   font-size: 1rem
-
-  &
-    font-size: 0.875rem
+  font-weight: 100
+  line-height: 1.3rem
 
 .typography--color-primary
-  color: #f2994a
-
-.typography--color-error
-  color: #eb5757
+  color: $primary
+.typography--color-white
+  color: #fff
+.typography--color-black
+  color: #000
 
 .typography--align-left
   text-align: left
@@ -57,3 +57,5 @@ h1,h2,h3,h4,h5,h6,p
 
 .typography--align-right
   text-align: right
+.primary-acent
+  color: $primary
