--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,4 +9,5 @@
 @import "../components/UIElements/BlurPanel/BlurPanel.sass";
 @import "../components/UIElements/Typohraphy/Typography.sass";
 @import "../components/UIElements/Content/Content.sass";
+@import "../components/UIElements/Container/Container.sass";
 @import "../components/shared/Header/Header";
