--- a/src/components/UIElements/Button/Button.sass
+++ b/src/components/UIElements/Button/Button.sass
@@ -5,15 +5,22 @@
   text-decoration: none
   font-weight: 600
   font-weight: 16px
-  transition: all .5s ease
+  transition: all .3s ease
   width: auto
   border: 1px solid transparent
   &--primary
     background-color: $primary
     color: #fff
+    &:hover
+      background-color: $primary
+      color: #fff
+
   &--primary--outlined
     border: 1px solid $primary
     color: $primary
+    &:hover
+      background-color: $primary
+      color: #fff
   &--secondary
     background-color: $secondary
     color: #fff
