--- a/src/styles/reset.sass
+++ b/src/styles/reset.sass
@@ -45,3 +45,7 @@ body
   font-family: Proxima Nova, sans-serif
 img
   max-width: 100%
+.main
+  display: flex
+  align-items: center
+  flex-direction: column
