Making responsive look , adding breakpoints with mixins,mobile look

--- a/src/components/UIElements/BlurPanel/BlurPanel.sass
+++ b/src/components/UIElements/BlurPanel/BlurPanel.sass
@@ -3,6 +3,11 @@
   flex-wrap: wrap
   align-items: center
   height: auto
-  padding: 55px 115px
-  background-color: rgba(0,0 ,0 ,.4 )
+  padding: 50px
+  background-color: $secondary
+  opacity: 1
+  border-radius: 15px
   background-blend-mode: darken
+  width: auto
+  @include small
+    padding: 15px 20px
