--- a/src/components/UIElements/SearchInput/SearchInput.sass
+++ b/src/components/UIElements/SearchInput/SearchInput.sass
@@ -9,5 +9,9 @@
     font-size: 16px
     font-weight: 600
     width: 380px
+    @include small
+      display: none
+    @include medium
+      display: none
     &::placeholder
       color: #fff
