--- a/src/components/UIElements/Container/Container.sass
+++ b/src/components/UIElements/Container/Container.sass
@@ -3,6 +3,22 @@
   display: flex
   width: inhertit
   height: inhertit
+  &-width
+    &--1-col
+      width: 100%
+
+    &--2-col
+      width: 50%
+      @include small
+        width: 100%
+      @include medium
+        width: 100%
+  &-height
+    &--full
+      height: 100%
+    &--section
+      height: 900px
+
   &-color
     &--white
       background-color: $primary
@@ -10,25 +26,33 @@
       background-color: $primary
     &--secondary
       background-color: $secondary
-  &-align
-    &--left
-      justify-content: flex-start
-    &--right
-      justify-content: flex-end
+
+  &-justify
+    &--top
+      justify-content: start
+    &--bottom
+      justify-content: end
     &--center
       justify-content: center
-  &-vertical-align
-    &--top
+
+  &-align
+    &--left
       align-items: flex-start
     &--center
       align-items: center
-    &--bottom
+    &--right
       align-items: flex-end
+
   &-direction
     &--row
       flex-direction: row
+      @include small
+        flex-direction: column
+      @include medium
+        flex-direction: column
     &--column
       flex-direction: column
+
   &-gap
     &--small
       gap: 1rem
@@ -36,9 +60,11 @@
       gap: 2rem
     &--big
       gap: 3rem
+
   &-fluid
     &-fixed
       max-width: 1640px
+
   &-paddingH
     &--small
       padding: 0 1rem
@@ -46,5 +72,9 @@
       padding: 0 2rem
     &--big
       padding: 0 5rem
+      @include small
+        padding: 0 3rem
     &--large
       padding: 0 7rem
+      @include small
+        padding: 0 4rem
