--- a/src/components/UIElements/SlidingPanel/SlidingPanel.sass
+++ b/src/components/UIElements/SlidingPanel/SlidingPanel.sass
@@ -6,7 +6,11 @@
   position: absolute
   display: flex
   top: 0
+  z-index: 99999999
   border-top: 80px solid $primary
+  @include small
+    width: 100%
+    top: -100px
 
   &--open
     right: 0
