--- a/src/components/UIElements/Typohraphy/Typography.sass
+++ b/src/components/UIElements/Typohraphy/Typography.sass
@@ -6,8 +6,11 @@ h1,h2,h3,h4,h5,h6,p
   font-family: $primaryFont
 
 .typography--variant-h1
-  font-size: 6rem
+  font-size: 5rem
   font-weight: 700
+  line-height: 1
+  @include small
+    font-size: 4rem
 
 .typography--variant-h2
   font-size: 3.75rem
@@ -28,10 +31,14 @@ h1,h2,h3,h4,h5,h6,p
 .typography--variant-h6
   font-size: 1.25rem
   font-weight: 500
+  @include small
+    font-size: 1rem
 
 .typography--variant-subheading1
   font-size: 1rem
   font-weight: 500
+  @include small
+    font-size: 0.875rem
 
 .typography--variant-subheading2
   font-size: 0.875rem
