--- a/src/components/shared/Header/Header.sass
+++ b/src/components/shared/Header/Header.sass
@@ -5,5 +5,5 @@
   flex-direction: column
   align-items: center
   &__background
-    background-size: cover
+    background-size: 100% 100%
     background-position: center center
