--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -11,7 +11,7 @@
 
 // Large devices
 @mixin big
-  @media (min-width: #{$medium}) and (min-width: #{$big})
+  @media (min-width: #{$medium}) and (max-width: #{$large})
     @content
 
 // Extra large devices
