fixing sticky nav glitch
After scroll limit , navigaton changed position to fixed , and then whole content were moving up , so when you scroll you saw glitch

--- a/src/components/UIElements/Navigation/Navigation.sass
+++ b/src/components/UIElements/Navigation/Navigation.sass
@@ -26,6 +26,12 @@
     gap: 35px
     @include small
       flex: 3
+.container
+  &__wrapper
+    height: 100px
+.sticky-container
+  &__wrapper
+
 .sticky-navigation
   z-index: 9999
   height: 60px
