Fixing Sliding menu
Moved state to header to have it in one place , and pass it to StickNav and Normal

--- a/src/components/UIElements/SlidingPanel/SlidingPanel.sass
+++ b/src/components/UIElements/SlidingPanel/SlidingPanel.sass
@@ -1,13 +1,14 @@
 .sliding-panel
   background-color: #fff
+  position: fixed
   width: 50%
   height: 100vh
   margin-top: 100px
-  position: absolute
   display: flex
   top: 0
   z-index: 99999999
   border-top: 80px solid $primary
+  border-radius: 15px 0px 0 15px
   @include small
     width: 100%
     top: -100px
