Adding animations, adding menu

--- a/src/components/UIElements/Typohraphy/Typography.sass
+++ b/src/components/UIElements/Typohraphy/Typography.sass
@@ -42,7 +42,7 @@ h1,h2,h3,h4,h5,h6,p
 
 .typography--variant-subheading2
   font-size: 0.875rem
-  font-weight: 500
+  font-weight: 600
 
 .typography--variant-p
   font-size: 1rem
@@ -55,6 +55,8 @@ h1,h2,h3,h4,h5,h6,p
   color: #fff
 .typography--color-black
   color: #000
+.typography--color-heavy-grey
+  color: $heavy-grey
 
 .typography--align-left
   text-align: left
