--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @import "./mixins";
 @import "../components/shared/Menu/Menu.sass";
 @import "../components/UIElements/List/List.sass";
+@import "../components/UIElements/Slider/Slider.sass";
 @import "../components//UIElements/SearchInput/SearchInput.sass";
 @import "../components/UIElements/Navigation/Navigation";
 @import "../components/UIElements/Button/Button.sass";
@@ -14,3 +15,4 @@
 @import "../components/UIElements/Content/Content.sass";
 @import "../components/UIElements/Container/Container.sass";
 @import "../components/shared/Header/Header";
+@import "../components/UIElements/Animation/Animation.sass";
