--- a/src/components/UIElements/SlidingPanel/SlidingPanel.sass
+++ b/src/components/UIElements/SlidingPanel/SlidingPanel.sass
@@ -7,8 +7,8 @@
   display: flex
   top: 0
   z-index: 99999999
-  border-top: 80px solid $primary
   border-radius: 15px 0px 0 15px
+  border: 1px solid #000
   @include small
     width: 100%
     top: -100px
