--- a/src/components/shared/Menu/Menu.sass
+++ b/src/components/shared/Menu/Menu.sass
@@ -1,1 +1,12 @@
 
+.menu-link
+  text-decoration: none
+  color: #000
+  padding: 1rem
+  transition: all .5s ease
+  border-radius: 15px
+  font-weight: 600
+  font-size: 24px
+  &:hover
+    background-color: $primary
+    color: white
