--- a/src/components/UIElements/SlidingPanel/SlidingPanel.sass
+++ b/src/components/UIElements/SlidingPanel/SlidingPanel.sass
@@ -8,7 +8,7 @@
   top: 0
   z-index: 99999999
   border-radius: 15px 0px 0 15px
-  border: 1px solid #000
+  border: 1px solid #0000001c
   @include small
     width: 100%
     top: -100px
