Navigation close button, menu improvments

--- a/src/components/UIElements/Animation/Animation.sass
+++ b/src/components/UIElements/Animation/Animation.sass
@@ -1,4 +1,12 @@
+
 .animation
   height: 500px
   display: flex
   align-items: flex-start
+.back-animation
+  width: 50px
+  height: 100px
+.back-animation
+  &svg
+    height: auto
+    width: auto
