--- a/src/components/UIElements/SlidingPanel/SlidingPanel.sass
+++ b/src/components/UIElements/SlidingPanel/SlidingPanel.sass
@@ -2,13 +2,12 @@
   background-color: #fff
   position: fixed
   width: 50%
-  height: 100vh
+  height: auto
   margin-top: 100px
   display: flex
   top: 0
   z-index: 99999999
-  border-radius: 15px 0px 0 15px
-  border: 1px solid #0000001c
+  border-radius: 50px 0px 0 15px
   @include small
     width: 100%
     top: -100px
