--- a/src/components/UIElements/Navigation/Navigation.sass
+++ b/src/components/UIElements/Navigation/Navigation.sass
@@ -45,7 +45,6 @@
   max-width: 1920px
   @include small
     flex-direction: row
-    margin-top: 10px
   &__wrapper
     position: fixed
     animation: slide-in .2s 1
@@ -55,7 +54,7 @@
     display: flex
     justify-content: center
     @include small
-      padding: .5rem 1rem
+      padding: 0rem 1rem
   &__logo
     height: 35px
     @include small
