--- a/src/components/UIElements/Button/Button.sass
+++ b/src/components/UIElements/Button/Button.sass
@@ -26,6 +26,8 @@
     box-shadow: 5px 7px 12px 0px rgba(0,0,0,0.05)
     -webkit-box-shadow: 5px 7px 12px 0px rgba(0,0,0,0.05)
     -moz-box-shadow: 5px 7px 12px 0px rgba(0,0,0,0.05)
+    @include small
+      width: 40%
     &:hover
       background-color: #fff
       color: $primary
