--- a/src/components/UIElements/Animation/Animation.sass
+++ b/src/components/UIElements/Animation/Animation.sass
@@ -1,12 +1,9 @@
 
-.animation
+.menu-animation
   height: 500px
   display: flex
   align-items: flex-start
-.back-animation
-  width: 50px
-  height: 100px
-.back-animation
-  &svg
-    height: auto
-    width: auto
+  justify-content: center
+  @include small
+    height: 350px
+    width: 100%
