Reusble Modal , Message us modal

--- a/src/components/UIElements/Button/Button.sass
+++ b/src/components/UIElements/Button/Button.sass
@@ -18,6 +18,10 @@
     &:hover
       background-color: $primary
       color: #fff
+  &--primary-top
+    background-color: $primary
+    color: #fff
+    border-radius: 0px 0px 20px 20px
   &--primary--left
     background-color: $primary
     color: #fff
