--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import "./reset";
 @import "./mixins";
 @import "../components/shared/Menu/Menu.sass";
+@import "../components/UIElements/Modal/Modal.sass";
 @import "../components/UIElements/List/List.sass";
 @import "../components/UIElements/Slider/Slider.sass";
 @import "../components//UIElements/SearchInput/SearchInput.sass";
