Booking panel, booking indictor

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@
 @import "../components/shared/Menu/Menu.sass";
 @import "../components/UIElements/Modal/Modal.sass";
 @import "../components/UIElements/List/List.sass";
+@import "../components/booking/Booking.sass";
 @import "../components/UIElements/Slider/Slider.sass";
 @import "../components//UIElements/SearchInput/SearchInput.sass";
 @import "../components/UIElements/Navigation/Navigation";
