--- a/src/components/UIElements/Typohraphy/Typography.sass
+++ b/src/components/UIElements/Typohraphy/Typography.sass
@@ -57,7 +57,8 @@ h1,h2,h3,h4,h5,h6,p
   color: #000
 .typography--color-heavy-grey
   color: $heavy-grey
-
+.typography--color-secondary
+  color: $secondary
 .typography--align-left
   text-align: left
 
