--- a/src/components/shared/Header/Header.sass
+++ b/src/components/shared/Header/Header.sass
@@ -6,7 +6,7 @@
   align-items: center
 
   &__background
-    background-size: 100% 100%
+    background-size: 100% auto
     background-position: center center
     @include small
       background-image: url("https://www.datocms-assets.com/55568/1632492269-header-bg-mobile.png")
