Temp remove booking , adding cloros to second section

--- a/src/components/UIElements/List/List.sass
+++ b/src/components/UIElements/List/List.sass
@@ -34,7 +34,7 @@
     @include small
       padding: .5rem 1rem
     &--active
-      background-color: $primary
+      background-color: inherit
       color: white
       border: 1px solid white
     &--disabled
