--- a/src/components/shared/Header/Header.sass
+++ b/src/components/shared/Header/Header.sass
@@ -10,6 +10,6 @@
     background-position: center center
 .header-animation
   width: 100%
-.background-full-wrapper
+.header-background-full-wrapper
   width: 100%
   height: 100%
