New styling and animation correction

--- a/src/components/UIElements/Button/Button.sass
+++ b/src/components/UIElements/Button/Button.sass
@@ -53,8 +53,12 @@
       color: $secondary
 
   &--secondary--outlined
-    color: #fff
+    color: $secondary
     border: 1px solid $secondary
+    &:hover
+      color: #fff
+      background-color: $secondary
+      border: 1px solid $secondary
   &--outlined
     color: #fff
     border: 1px solid #fff
