--- a/src/components/UIElements/SearchInput/SearchInput.sass
+++ b/src/components/UIElements/SearchInput/SearchInput.sass
@@ -4,14 +4,14 @@
     border-radius: 10px
     outline: none
     border: none
-    background-color: rgba(0,0,0, 0.4)
-    color: #fff
+    color: $secondary
     font-size: 16px
     font-weight: 600
     width: 380px
+    border: 1px solid $secondary
     @include small
       display: none
     @include medium
       display: none
     &::placeholder
-      color: #fff
+      color: $secondary
