--- a/src/styles/reset.sass
+++ b/src/styles/reset.sass
@@ -44,6 +44,8 @@ body
   font-size: 16
   box-sizing: border-box
   font-family: Proxima Nova, sans-serif
+  background-color: #fff
+  z-index: 1
 img
   max-width: 100%
 .main
