--- a/src/components/UIElements/Button/Button.sass
+++ b/src/components/UIElements/Button/Button.sass
@@ -25,13 +25,14 @@
   &--primary--left
     background-color: $primary
     color: #fff
-    border-radius: 50px 0px 15px 0px
-    width: 20%
+    width: 100%
+    text-align: left
+    margin-bottom: 20px
     box-shadow: 5px 7px 12px 0px rgba(0,0,0,0.05)
     -webkit-box-shadow: 5px 7px 12px 0px rgba(0,0,0,0.05)
     -moz-box-shadow: 5px 7px 12px 0px rgba(0,0,0,0.05)
     @include small
-      width: 40%
+      width: 100%
     &:hover
       background-color: #fff
       color: $primary
