--- a/src/components/UIElements/SlidingPanel/SlidingPanel.sass
+++ b/src/components/UIElements/SlidingPanel/SlidingPanel.sass
@@ -2,17 +2,14 @@
   background-color: #fff
   position: fixed
   width: 50%
-  height: auto
-  margin-top: 100px
+  height: 100vh
   display: flex
+  align-items: center
   top: 0
   z-index: 99999999
-  border-radius: 50px 0px 0 15px
-  border: 1px solid $primary
   transition: all .25s ease
   @include small
     width: 100%
-    top: -100px
   &--open
     right: 0
   &--close
