Fix mobile header

--- a/src/components/UIElements/Container/Container.sass
+++ b/src/components/UIElements/Container/Container.sass
@@ -49,6 +49,10 @@
       align-items: center
     &--right
       align-items: flex-end
+    &--center--mobile-bottom
+      align-items: center
+      @include small
+        align-items: flex-end
 
   &-direction
     &--row
