--- a/src/components/shared/Header/Header.sass
+++ b/src/components/shared/Header/Header.sass
@@ -13,10 +13,12 @@
     background-repeat: no-repeat
     background-position: center -50%
     background-attachment: fixed
-  @include small
-    background-attachment: scroll
-    background-position: bottom
-    background-size: 50%
+    @include small
+      background-attachment: scroll
+      background-size: cover
+      background-position: center
+      background: url("../images/header-bg-mobile.svg")
+      background-repeat: no-repeat
 .header-animation
   width: 100%
 .header-background-full-wrapper
