header animation correction

--- a/src/components/UIElements/List/List.sass
+++ b/src/components/UIElements/List/List.sass
@@ -31,6 +31,8 @@
     text-align: center
     transition: all 1 ease
     border: 1px solid white
+    &:hover
+      cursor: pointer
     @include small
       padding: .5rem 1rem
     &--active
