--- a/src/components/shared/Header/Header.sass
+++ b/src/components/shared/Header/Header.sass
@@ -9,9 +9,9 @@
     background-position: center center
   &__content
     background: url("../images/header-svg.svg")
-    background-size: cover
+    background-size: contain
     background-repeat: no-repeat
-    background-position: center -50%
+    background-position: center 15vh
     background-attachment: fixed
     @include small
       background-attachment: scroll
