fixing paddings , auto heights

--- a/src/components/UIElements/List/List.sass
+++ b/src/components/UIElements/List/List.sass
@@ -31,10 +31,12 @@
     text-align: center
     transition: all 1 ease
     border: 1px solid white
+    min-width: 10%
     &:hover
       cursor: pointer
     @include small
-      padding: .5rem 1rem
+      padding: 1rem
+      min-width: 10%
     &--active
       background-color: inherit
       color: white
