--- a/src/components/UIElements/Typohraphy/Typography.sass
+++ b/src/components/UIElements/Typohraphy/Typography.sass
@@ -15,6 +15,8 @@ h1,h2,h3,h4,h5,h6,p
 .typography--variant-h2
   font-size: 3.75rem
   font-weight: 600
+  @include small
+    font-size: 2rem
 
 .typography--variant-h3
   font-size: 3rem
