--- a/src/components/UIElements/Typohraphy/Typography.sass
+++ b/src/components/UIElements/Typohraphy/Typography.sass
@@ -6,7 +6,7 @@ h1,h2,h3,h4,h5,h6,p
   font-family: $primaryFont
 
 .typography--variant-h1
-  font-size: 5rem
+  font-size: 4rem
   font-weight: 700
   line-height: 1
   @include small
@@ -23,8 +23,11 @@ h1,h2,h3,h4,h5,h6,p
   font-weight: 500
 
 .typography--variant-h4
-  font-size: 2.125rem
-  font-weight: 500
+  font-size: 1.8rem
+  font-weight: 100
+  @include small
+    font-size: 1.5rem
+    font-weight: 100
 
 .typography--variant-h5
   font-size: 1.5rem
