working on contact form

--- a/src/components/UIElements/BlurPanel/BlurPanel.sass
+++ b/src/components/UIElements/BlurPanel/BlurPanel.sass
@@ -9,6 +9,7 @@
   border-radius: 15px
   background-blend-mode: darken
   width: auto
+  gap: 1rem
   @include small
     padding: 15px 20px
     background-attachment: scroll
