--- a/src/components/UIElements/Button/Button.sass
+++ b/src/components/UIElements/Button/Button.sass
@@ -15,9 +15,11 @@
   &--primary
     background-color: $primary
     color: #fff
+    border: 1px solid #ffffff00
     &:hover
-      background-color: $primary
-      color: #fff
+      background-color: white
+      color: $primary
+      border: 1px solid $primary
   &--primary-top
     background-color: $primary
     color: #fff
