--- a/src/components/UIElements/Container/Container.sass
+++ b/src/components/UIElements/Container/Container.sass
@@ -15,6 +15,12 @@
         width: 100%
       @include medium
         width: 100%
+    &--3-col
+      width: 40%
+      @include small
+        width: 100%
+      @include medium
+        width: 100%
   &-height
     &--full
       height: 100%
