--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,7 @@
 @import "../components/UIElements/Modal/Modal.sass";
 @import "../components/booking/Booking.sass";
 @import "../components/UIElements/Slider/Slider.sass";
+@import "../components/UIElements/Form/Form.sass";
 @import "../components//UIElements/SearchInput/SearchInput.sass";
 @import "../components/UIElements/Navigation/Navigation";
 @import "../components/UIElements/Button/Button.sass";
