--- a/src/components/UIElements/Form/Form.sass
+++ b/src/components/UIElements/Form/Form.sass
@@ -1,11 +1,14 @@
 .form
   display: flex
-  flex-direction: column
+  flex-direction: row
   flex-wrap: wrap
   gap: 1rem
   width: 100%
+  min-height: 475px
   &__label
-    font-size: 14px
+    font-size: 16px
+    font-weight: 600
+    color: $secondary
     &--wrapper
       display: flex
       flex-direction: column
