--- a/src/components/shared/Header/Header.sass
+++ b/src/components/shared/Header/Header.sass
@@ -4,6 +4,8 @@
   display: flex
   flex-direction: column
   align-items: center
+  @include small
+    height: 90vh
   &__background
     background-size: 100% auto
     background-position: center center
@@ -18,7 +20,7 @@
       background-size: cover
       background-position: center
       background: url("../images/header-bg-mobile.svg")
-      background-repeat: no-repeat
+      background-repeat: no-repeat !important
 .header-animation
   width: 100%
 .header-background-full-wrapper
