--- a/src/components/shared/Header/Header.sass
+++ b/src/components/shared/Header/Header.sass
@@ -10,10 +10,11 @@
     background-size: 100% auto
     background-position: center center
   &__content
-    background: url("../images/header-svg.svg")
-    background-size: contain
+    background: url("../images/right-bg-header.svg")
+    background-size:
+
     background-repeat: no-repeat
-    background-position: center 15vh
+    background-position: 120% top
     background-attachment: fixed
     @include small
       background-attachment: scroll
